--- a/index.html
+++ b/index.html
@@ -25,29 +25,23 @@
       </div>
       <ul>
         <li>
-          <a href="#" target="_blank">Inscrever-se no NLW</a>
+          <a href="https://github.com/sauloobarboza/" target="_blank">Acessar meu Github</a>
         </li>
         <li>
-          <a href="#" target="_blank">Baixar meu E-book</a>
+          <a href="https://linkedin.com/saulo-barboza" target="_blank">Meu Linkedin</a>
         </li>
         <li>
-          <a href="#" target="_blank">Ver meu portifólio</a>
-        </li>
-        <li>
-          <a href="#" target="_blank">Conheça o explorer</a>
+          <a href="https://instagram.com/sauloobarboza" target="_blank">Meu Instagram</a>
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com/" target="_blank">
+        <a href="https://github.com/sauloobarboza" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="https://instagram.com/" target="_blank">
+        <a href="https://instagram.com/sauloobarboza" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="https://youtube.com/" target="_blank">
-          <ion-icon name="logo-youtube"></ion-icon>
-        </a>
-        <a href="https://linkedin.com/" target="_blank">
+        <a href="https://linkedin.com/saulo-barboza" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
