--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="https://github.com/sauloobarboza/" target="_blank">Acessar meu Github</a>
         </li>
         <li>
-          <a href="https://linkedin.com/saulo-barboza" target="_blank">Meu Linkedin</a>
+          <a href="https://www.linkedin.com/in/saulo-barboza/" target="_blank">Meu Linkedin</a>
         </li>
         <li>
           <a href="https://instagram.com/sauloobarboza" target="_blank">Meu Instagram</a>
@@ -41,7 +41,7 @@
         <a href="https://instagram.com/sauloobarboza" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="https://linkedin.com/saulo-barboza" target="_blank">
+        <a href="https://www.linkedin.com/in/saulo-barboza/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
